# spot-detector

./: LICENSE  README.md  setup.cfg  tox.ini
src/spot_detector/: _widget.py  napari.yaml
src/spot_detector/_tests/: test_widget.py
